[package]
name = "line_racing"
version = "0.1.0"
edition = "2021"

[profile.optimized]
inherits = "release"
lto = true
codegen-units = 1

[dependencies]
bevy = { path = "../bevy" }
# bevy_local = 
# bevy_polyline = "0.10.0"
# bevy_vector_shapes = "0.8.0"
# bevy_mod_mesh_tools = { git = "https://github.com/DGriffin91/bevy_mod_mesh_tools", rev = "37afec1cc25b9f4ea7e6a3514f5af4d0df872e9a" }
